Implemented go to redefined