@@ -6,14 +6,15 @@
 
 package hu.bme.mit.semantifyr.oxsts.lang.ide.server.commands;
 
-import com.google.gson.JsonPrimitive;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonObject;
 import com.google.inject.Inject;
 import com.google.inject.Provider;
 import com.google.inject.Singleton;
-import hu.bme.mit.semantifyr.oxsts.lang.ide.server.concurrent.PausableRequestManager;
+//import hu.bme.mit.semantifyr.oxsts.lang.ide.server.concurrent.PausableRequestManager;
 import hu.bme.mit.semantifyr.oxsts.model.oxsts.ClassDeclaration;
-import hu.bme.mit.semantifyr.oxsts.model.oxsts.OxstsModelPackage;
 import hu.bme.mit.semantifyr.semantics.transformation.OxstsToXstsTransformer;
+import org.eclipse.lsp4j.Location;
 import org.eclipse.xtext.ide.server.ILanguageServerAccess;
 import org.eclipse.xtext.util.CancelIndicator;
 
@@ -26,8 +27,8 @@ public class InlineOxstsCommandHandler extends AbstractCommandHandler<ClassDecla
     @Inject
     protected Provider<OxstsToXstsTransformer> xstsTransformerProvider;
 
-    @Inject
-    protected PausableRequestManager pausableRequestManager;
+//    @Inject
+//    protected PausableRequestManager pausableRequestManager;
 
     @Override
     public String getId() {
@@ -41,25 +42,20 @@ public class InlineOxstsCommandHandler extends AbstractCommandHandler<ClassDecla
 
     @Override
     public List<Object> serializeArguments(ClassDeclaration arguments) {
-        return List.of(arguments.eResource().getURI().toString(), arguments.getName());
+        var location = getLocation(arguments);
+        return List.of(location);
     }
 
     @Override
     protected ClassDeclaration parseArguments(List<Object> arguments, ILanguageServerAccess access, CancelIndicator cancelIndicator) {
-        var uriJson = (JsonPrimitive) arguments.get(0);
-        var classNameJson = (JsonPrimitive) arguments.get(1);
-
-        var uri = uriJson.getAsString();
-        var className = classNameJson.getAsString();
-
-        var classDeclaration = access.doRead(uri, context -> {
-            var resource = context.getResource();
-            var oxstsPackage = (OxstsModelPackage) resource.getContents().getFirst();
-            return (ClassDeclaration) oxstsPackage.getDeclarations().stream().filter(c -> className.equals(c.getName())).findFirst().get();
-        });
+        var gsonBuilder = new GsonBuilder();
+        var gson = gsonBuilder.create();
+        var locationJson = (JsonObject) arguments.get(0);
+        var location = gson.fromJson(locationJson, Location.class);
+        var element = getElement(access, location);
 
         try {
-            return classDeclaration.get();
+            return (ClassDeclaration) element.get();
         } catch (InterruptedException | ExecutionException e) {
             throw new RuntimeException(e);
         }
@@ -69,7 +65,7 @@ public class InlineOxstsCommandHandler extends AbstractCommandHandler<ClassDecla
     protected Object execute(ClassDeclaration arguments, ILanguageServerAccess access, CommandProgressContext progressContext) {
         progressContext.begin("Compiling class " + arguments.getName(), "Initializing");
 
-        pausableRequestManager.pause();
+//        pausableRequestManager.pause();
 
         try {
             compilationScopeRunnable(() -> {
@@ -80,7 +76,7 @@ public class InlineOxstsCommandHandler extends AbstractCommandHandler<ClassDecla
 
             progressContext.end("Compilation done!");
         } finally {
-            pausableRequestManager.resume();
+//            pausableRequestManager.resume();
         }
 
         return null;
