@@ -6,16 +6,20 @@
 
 package hu.bme.mit.semantifyr.oxsts.lang.ide.server.commands;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonObject;
 import com.google.gson.JsonPrimitive;
 import com.google.inject.Inject;
 import com.google.inject.Provider;
 import com.google.inject.Singleton;
 import hu.bme.mit.semantifyr.backends.theta.verification.ThetaVerifier;
-import hu.bme.mit.semantifyr.oxsts.lang.ide.server.concurrent.PausableRequestManager;
+//import hu.bme.mit.semantifyr.oxsts.lang.ide.server.concurrent.PausableRequestManager;
 import hu.bme.mit.semantifyr.oxsts.model.oxsts.ClassDeclaration;
 import hu.bme.mit.semantifyr.oxsts.model.oxsts.OxstsModelPackage;
 import hu.bme.mit.semantifyr.semantics.verification.VerificationCaseRunResult;
 import hu.bme.mit.semantifyr.semantics.verification.VerificationResult;
+import org.eclipse.lsp4j.Location;
 import org.eclipse.xtext.ide.server.ILanguageServerAccess;
 import org.eclipse.xtext.util.CancelIndicator;
 
@@ -29,8 +33,8 @@ public class VerifyOxstsCommandHandler extends AbstractCommandHandler<ClassDecla
     @Inject
     protected Provider<ThetaVerifier> oxstsVerifierProvider;
 
-    @Inject
-    protected PausableRequestManager pausableRequestManager;
+//    @Inject
+//    protected PausableRequestManager pausableRequestManager;
 
     @Override
     public String getId() {
@@ -44,25 +48,20 @@ public class VerifyOxstsCommandHandler extends AbstractCommandHandler<ClassDecla
 
     @Override
     public List<Object> serializeArguments(ClassDeclaration arguments) {
-        return List.of(arguments.eResource().getURI().toString(), arguments.getName());
+        var location = getLocation(arguments);
+        return List.of(location);
     }
 
     @Override
     protected ClassDeclaration parseArguments(List<Object> arguments, ILanguageServerAccess access, CancelIndicator cancelIndicator) {
-        var uriJson = (JsonPrimitive) arguments.get(0);
-        var classNameJson = (JsonPrimitive) arguments.get(1);
-
-        var uri = uriJson.getAsString();
-        var className = classNameJson.getAsString();
-
-        var classDeclaration = access.doRead(uri, context -> {
-            var resource = context.getResource();
-            var oxstsPackage = (OxstsModelPackage) resource.getContents().getFirst();
-            return (ClassDeclaration) oxstsPackage.getDeclarations().stream().filter(c -> className.equals(c.getName())).findFirst().get();
-        });
+        var gsonBuilder = new GsonBuilder();
+        var gson = gsonBuilder.create();
+        var locationJson = (JsonObject) arguments.get(0);
+        var location = gson.fromJson(locationJson, Location.class);
+        var element = getElement(access, location);
 
         try {
-            return classDeclaration.get();
+            return (ClassDeclaration) element.get();
         } catch (InterruptedException | ExecutionException e) {
             throw new RuntimeException(e);
         }
@@ -72,7 +71,7 @@ public class VerifyOxstsCommandHandler extends AbstractCommandHandler<ClassDecla
     protected Object execute(ClassDeclaration arguments, ILanguageServerAccess access, CommandProgressContext progressContext) {
         progressContext.begin("Verifying class " + arguments.getName(), "Initializing");
 
-        pausableRequestManager.pause();
+//        pausableRequestManager.pause();
 
         var result = new CompletableFuture<VerificationCaseRunResult>();
 
@@ -87,7 +86,7 @@ public class VerifyOxstsCommandHandler extends AbstractCommandHandler<ClassDecla
         } catch (Exception e) {
             result.completeExceptionally(e);
         } finally {
-            pausableRequestManager.resume();
+//            pausableRequestManager.resume();
         }
 
         try {
